tests/semantic/arrayDecl_error1.mtp
(* Declare an array with size 0*)
var something : array(0) of integer;

begin

end.